--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,11 @@
 <html>
   <head>
     <title>Cero</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
+    <%= javascript_pack_tag "main" %>
   </head>
-
+    
   <body>
-    <%= yield %>
+    <div id="application"></div>
   </body>
 </html>
